# FCN_stock_crawler

./: .gitignore  Dockerfile.pgdb  Dockerfile.scheduler  Makefile  README.md  config.py  genenv.py  local.ini  pgdb.yml  pyproject.toml  rabbitmq.yml  scheduler.yml
database/: Dockerfile.db  create_table.sql  pgdb.yml
sql/: create_table.sql
stock_crawler/: clients.py  create_report.py  data_factory.py  router.py  scheduler.py  schema.py
stock_crawler/task/: gen_data.py  plot_data.py
